<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    tools:background="?android:attr/windowBackground">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/registro" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:gravity="center">

        <EditText
            android:id="@+id/editNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/user"
            android:maxLines="1"
            android:inputType="text"/>

        <EditText
            android:id="@+id/editLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/user"
            android:maxLines="1"
            android:inputType="text"/>

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/contraseña"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/pass"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/editPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/contraseña2"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/pass"
            android:maxLines="1"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/registro"
            android:id="@+id/buttonRegistrarse"
            android:theme="@style/MyButton"
            android:textColor="@color/colorWhite"
            android:maxLines="1"
            android:inputType="text"/>

    </LinearLayout>

</LinearLayout>