<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    tools:background="?android:attr/windowBackground"
    android:weightSum="100">

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="70"
        android:gravity="bottom">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logotipo" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="30"
        android:gravity="center">

        <EditText
            android:id="@+id/editLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dp"
            android:theme="@style/MyButton"
            android:maxLines="1"
            android:inputType="text" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/contraseña"
            android:drawableLeft="@drawable/pass"
            android:drawablePadding="10dp"
            android:maxLines="1"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/iniciaSesion"
            android:id="@+id/buttonIniciarSesion"
            android:theme="@style/MyButton"
            android:textColor="@color/colorWhite"/>

        <TextView android:id="@+id/registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/registro"
            android:textSize="16dip"
            android:textColor="@color/colorLogin"
            android:clickable="true"
            android:gravity="center"
            android:layout_gravity="center" />

    </LinearLayout>

</LinearLayout>
