<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="100"
        tools:background="?android:attr/windowBackground"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <DatePicker
                android:id="@+id/datePicker2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextCantidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/cantidad"
                android:inputType="numberDecimal" />

            <Spinner
                android:id="@+id/spinnerTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Spinner.Underlined"/>/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/editTextConcepto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/concepto"
                android:inputType="text"
                android:maxLines="1" />

            <RadioButton
                android:id="@+id/radioButtonPredefinido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/predefinido" />

            <Button
                android:id="@+id/buttonGuardaOperacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guardar"
                android:textColor="@color/colorWhite"
                android:theme="@style/MyButton" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>