<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="100"
        tools:background="?android:attr/windowBackground"
        tools:context=".MainActivity">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <EditText
                android:id="@+id/editConcepto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:drawablePadding="10dp"
                android:hint="@string/concepto"
                android:inputType="text"
                android:maxLines="1"
                android:theme="@style/MyButton" />

            <Spinner
                android:id="@+id/spinnerTipo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                style="@style/Widget.AppCompat.Spinner.Underlined"/>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <EditText
                android:id="@+id/editCantidadMin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:drawablePadding="10dp"
                android:hint="@string/cantidad"
                android:inputType="numberDecimal"
                android:maxLines="1" />

            <EditText
                android:id="@+id/editCantidadMax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:drawablePadding="10dp"
                android:hint="@string/cantidad"
                android:inputType="numberDecimal"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="100">

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/radio_grup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_semana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:text="Una semana"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/radio_mes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:text="Un mes" />

                <RadioButton
                    android:id="@+id/radio_rango"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:text="Rango de facha" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_fecha"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <DatePicker
                    android:id="@+id/datePickermin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <DatePicker
                    android:id="@+id/datePickermax"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="true" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/buttonBusqueda"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/busqueda"
            android:textColor="@color/colorWhite"
            android:theme="@style/MyButton" />
    </LinearLayout>
</ScrollView>